--- a/portfolio.html
+++ b/portfolio.html
@@ -55,47 +55,55 @@
             </ul>
 
             <!-- section1 -->
-
-            <img src="./images/img.jpg" alt="App" width="360">
-            <h3 class="">Banking App Interface Concept</h3>
-            <p class="">App</p>
-
-            <img src="./images/img1.jpg" alt="Marketing" width="360">
-            <h3 class="mai">Cashless Payment</h3>
-            <p class="">Marketing</p>
-
-            <img src="./images/img2.jpg" alt="App" width="360">
-            <h3 class="mai">Meditation App</h3>
-            <p class="">App</p>
-
-            <!-- section2 -->
-
-            <img src="./images/imgsection1.jpg" alt="Marketing" width="360">
-            <h3 class="">Taxi Service</h3>
-            <p class="">Marketing</p>
-
-            <img src="./images/imgsection2.jpg" alt="Design" width="360">
-            <h3 class="">Screen Illustrations</h3>
-            <p class="">Design</p>
-
-            <img src="./images/imgsection3.jpg" alt="Marketing" width="360">
-            <h3 class="">Online Courses</h3>
-            <p>Marketing</p>
-
-            <!-- section3 -->
-
-            <img src="./images/imgbox1.jpg" alt="Design" width="360">
-            <h3 class="">Instagram Stories Concept</h3>
-            <p>Design</p>
-
-            <img src="./images/imgbox2.jpg" alt="Web Site" width="360">
-            <h3 class="">Organic Food</h3>
-            <p class="">Web Site</p>
-
-            <img src="./images/imgbox3.jpg" alt="Web Site" width="360">
-            <h3 class="">Fresh Coffee</h3>
-            <p class="">Web Site</p>
-
+            <ul class="list">
+                <li class="link">
+                    <img src="./images/img.jpg" alt="App" width="360">
+                    <h2 class=" subject-portfolio">Banking App Interface Concept</h2>
+                    <p class="">App</p>
+                </li>
+                <li class="link">
+                    <img src="./images/img1.jpg" alt="Marketing" width="360">
+                    <h2 class=" subject-portfolio">Cashless Payment</h2>
+                    <p class="">Marketing</p>
+                </li>
+                <li class="link">
+                    <img src="./images/img2.jpg" alt="App" width="360">
+                    <h2 class=" subject-portfolio">Meditation App</h2>
+                    <p class="">App</p>
+                </li>
+                <!-- section2 -->
+                <li class="link">
+                    <img src="./images/imgsection1.jpg" alt="Marketing" width="360">
+                    <h2 class=" subject-portfolio">Taxi Service</h2>
+                    <p class="">Marketing</p>
+                </li>
+                <li class="link">
+                    <img src="./images/imgsection2.jpg" alt="Design" width="360">
+                    <h2 class=" subject-portfolio">Screen Illustrations</h2>
+                    <p class="">Design</p>
+                </li>
+                <li class="link">
+                    <img src="./images/imgsection3.jpg" alt="Marketing" width="360">
+                    <h2 class=" subject-portfolio">Online Courses</h2>
+                    <p>Marketing</p>
+                </li>
+                <!-- section3 -->
+                <li class="link">
+                    <img src="./images/imgbox1.jpg" alt="Design" width="360">
+                    <h2 class=" subject-portfolio">Instagram Stories Concept</h2>
+                    <p>Design</p>
+                </li>
+                <li>
+                    <img src="./images/imgbox2.jpg" alt="Web Site" width="360">
+                    <h2 class=" subject-portfolio">Organic Food</h2>
+                    <p class="">Web Site</p>
+                </li>
+                <li> class="link"
+                    <img src="./images/imgbox3.jpg" alt="Web Site" width="360">
+                    <h2 class=" subject-portfolio">Fresh Coffee</h2>
+                    <p class="">Web Site</p>
+                </li>
+            </ul>
 
         </section>
     </main>
