--- a/portfolio.html
+++ b/portfolio.html
@@ -53,10 +53,10 @@
                 <li><button class="navigation-button" type="button">Marketing</button></li>
 
             </ul>
-
+            <li><a href=""></a></li>
             <!-- section1 -->
             <ul class="list">
-                <li class="link">
+                <li class=""><a class="link" href=""></a>
                     <img src="./images/img.jpg" alt="App" width="360">
                     <h2 class=" subject-portfolio">Banking App Interface Concept</h2>
                     <p class="">App</p>
@@ -98,7 +98,7 @@
                     <h2 class=" subject-portfolio">Organic Food</h2>
                     <p class="">Web Site</p>
                 </li>
-                <li> class="link"
+                <li class="link">
                     <img src="./images/imgbox3.jpg" alt="Web Site" width="360">
                     <h2 class=" subject-portfolio">Fresh Coffee</h2>
                     <p class="">Web Site</p>
