--- a/portfolio.html
+++ b/portfolio.html
@@ -56,7 +56,8 @@
             <li><a href=""></a></li>
             <!-- section1 -->
             <ul class="list">
-                <li class=""><a class="link" href=""></a>
+                <li>
+                    <a class="link" href=""></a>
                     <img src="./images/img.jpg" alt="App" width="360">
                     <h2 class=" subject-portfolio">Banking App Interface Concept</h2>
                     <p class="">App</p>
