--- a/portfolio.html
+++ b/portfolio.html
@@ -63,11 +63,13 @@
                     <p class="">App</p>
                 </li>
                 <li class="link">
+                    <a href=""></a>
                     <img src="./images/img1.jpg" alt="Marketing" width="360">
                     <h2 class=" subject-portfolio">Cashless Payment</h2>
                     <p class="">Marketing</p>
                 </li>
                 <li class="link">
+ <a href=""></a>
                     <img src="./images/img2.jpg" alt="App" width="360">
                     <h2 class=" subject-portfolio">Meditation App</h2>
                     <p class="">App</p>
@@ -108,11 +110,11 @@
 
         </section>
     </main>
-    <footer>
-        <a class="" href="./portfolio.html">Web<span class="">Studio</span>
+    <footer class="portfolio">
+        <a class="logo-beginning link" href="./index.html">Web<span class="logo-end link">Studio</span>
 
         </a>
-        <p class="">Increase the flow of customers and sales for your business with digital marketing & growth
+        <p class="end-text">Increase the flow of customers and sales for your business with digital marketing & growth
             solutions.</p>
     </footer>
 </body>
