--- a/portfolio.html
+++ b/portfolio.html
@@ -53,14 +53,15 @@
                 <li><button class="navigation-button" type="button">Marketing</button></li>
 
             </ul>
-            <li><a href=""></a></li>
+
             <!-- section1 -->
             <ul class="list">
                 <li>
-                    <a class="link" href=""></a>
-                    <img src="./images/img.jpg" alt="App" width="360">
-                    <h2 class=" subject-portfolio">Banking App Interface Concept</h2>
-                    <p class="">App</p>
+                    <a class="link" href="">
+                        <img src="./images/img.jpg" alt="App" width="360">
+                        <h2 class=" subject-portfolio">Banking App Interface Concept</h2>
+                        <p class="">App</p>
+                    </a>
                 </li>
                 <li class="link">
                     <a href=""></a>
@@ -69,7 +70,7 @@
                     <p class="">Marketing</p>
                 </li>
                 <li class="link">
- <a href=""></a>
+                    <a href=""></a>
                     <img src="./images/img2.jpg" alt="App" width="360">
                     <h2 class=" subject-portfolio">Meditation App</h2>
                     <p class="">App</p>
