--- a/portfolio.html
+++ b/portfolio.html
@@ -60,52 +60,69 @@
                     <a class="link" href="">
                         <img src="./images/img.jpg" alt="App" width="360">
                         <h2 class=" subject-portfolio">Banking App Interface Concept</h2>
-                        <p class="">App</p>
+                        <p class="paragraph-text">App</p>
                     </a>
                 </li>
                 <li class="link">
-                    <a href=""></a>
-                    <img src="./images/img1.jpg" alt="Marketing" width="360">
-                    <h2 class=" subject-portfolio">Cashless Payment</h2>
-                    <p class="">Marketing</p>
+                    <a class="link" href="">
+                        <img src="./images/img1.jpg" alt="Marketing" width="360">
+                        <h2 class=" subject-portfolio">Cashless Payment</h2>
+                        <p class="paragraph-text">Marketing</p>
+                    </a>
                 </li>
                 <li class="link">
-                    <a href=""></a>
-                    <img src="./images/img2.jpg" alt="App" width="360">
-                    <h2 class=" subject-portfolio">Meditation App</h2>
-                    <p class="">App</p>
+                    <a class="link" href="">
+                        <img src="./images/img2.jpg" alt="App" width="360">
+                        <h2 class=" subject-portfolio">Meditation App</h2>
+                        <p class="paragraph-text">App</p>
+                    </a>
                 </li>
                 <!-- section2 -->
+
                 <li class="link">
-                    <img src="./images/imgsection1.jpg" alt="Marketing" width="360">
-                    <h2 class=" subject-portfolio">Taxi Service</h2>
-                    <p class="">Marketing</p>
+                    <a class="link" href="">
+                        <img src="./images/imgsection1.jpg" alt="Marketing" width="360">
+                        <h2 class=" subject-portfolio">Taxi Service</h2>
+                        <p class="paragraph-text">Marketing</p>
+                    </a>
                 </li>
+
                 <li class="link">
-                    <img src="./images/imgsection2.jpg" alt="Design" width="360">
-                    <h2 class=" subject-portfolio">Screen Illustrations</h2>
-                    <p class="">Design</p>
+                    <a class="link" href="">
+                        <img src="./images/imgsection2.jpg" alt="Design" width="360">
+                        <h2 class=" subject-portfolio">Screen Illustrations</h2>
+                        <p class="paragraph-text">Design</p>
+                    </a>
                 </li>
+
                 <li class="link">
-                    <img src="./images/imgsection3.jpg" alt="Marketing" width="360">
-                    <h2 class=" subject-portfolio">Online Courses</h2>
-                    <p>Marketing</p>
+                    <a class="link" href="">
+                        <img src="./images/imgsection3.jpg" alt="Marketing" width="360">
+                        <h2 class=" subject-portfolio">Online Courses</h2>
+                        <p class="paragraph-text">Marketing</p>
+                    </a>
                 </li>
                 <!-- section3 -->
                 <li class="link">
-                    <img src="./images/imgbox1.jpg" alt="Design" width="360">
-                    <h2 class=" subject-portfolio">Instagram Stories Concept</h2>
-                    <p>Design</p>
+                    <a class="link" href="">
+                        <img src="./images/imgbox1.jpg" alt="Design" width="360">
+                        <h2 class=" subject-portfolio">Instagram Stories Concept</h2>
+                        <p class="paragraph-text">Design</p>
+                    </a>
                 </li>
                 <li>
-                    <img src="./images/imgbox2.jpg" alt="Web Site" width="360">
-                    <h2 class=" subject-portfolio">Organic Food</h2>
-                    <p class="">Web Site</p>
+                    <a class="link" href="">
+                        <img src="./images/imgbox2.jpg" alt="Web Site" width="360">
+                        <h2 class=" subject-portfolio">Organic Food</h2>
+                        <p class="paragraph-text">Web Site</p>
+                    </a>
                 </li>
                 <li class="link">
-                    <img src="./images/imgbox3.jpg" alt="Web Site" width="360">
-                    <h2 class=" subject-portfolio">Fresh Coffee</h2>
-                    <p class="">Web Site</p>
+                    <a class="link" href="">
+                        <img src="./images/imgbox3.jpg" alt="Web Site" width="360">
+                        <h2 class=" subject-portfolio">Fresh Coffee</h2>
+                        <p class="paragraph-text">Web Site</p>
+                    </a>
                 </li>
             </ul>
 
