--- a/index.html
+++ b/index.html
@@ -114,7 +114,7 @@
             </ul>
         </section>
     </main>
-    <footer class="the-end">
+    <footer class="portfolio">
         <a class="header-logo link" href="./index.html">Web<span class="logo-studio-end">Studio</span>
 
         </a>
