--- a/index.html
+++ b/index.html
@@ -114,16 +114,15 @@
             </ul>
         </section>
     </main>
-    <footer class="portfolio">
+    <footer class="footer">
         <a class="header-logo link" href="./index.html">Web<span class="logo-studio-end">Studio</span>
-
         </a>
-        <p class="main-text">Increase the flow of customers and sales for your business with digital marketing & growth
+        <p class="main-footer">Increase the flow of customers and sales for your business with digital marketing & growth
             solutions.</p>
+
+
+        <button class="btn" type="button">Order Service</button>
     </footer>
-
-    <button class="btn" type="button">Order Service</button>
-
 </body>
 
 </html>
